test/kubernetes/e2e/features/tracing_legacy/testdata/gateway.yaml
# Avoid using the default gateway because we don't want to destroy it when this
# test is over - that will break other tests that depend on the default gateway
# existing.
apiVersion: gateway.solo.io/v1
kind: Gateway
metadata:
  labels:
    app: gloo
    app.kubernetes.io/name: gateway-proxy-tracing
  name: gateway-proxy-tracing
spec:
  bindAddress: '::'
  bindPort: 18080
  proxyNames:
    - gateway-proxy
  httpGateway:
    virtualServiceSelector:
      gateway-type: tracing
    options:
      httpConnectionManagerSettings:
        tracing:
          openTelemetryConfig:
            collectorUpstreamRef:
              name: opentelemetry-collector
              namespace: default
