test/kubernetes/e2e/features/tracing_legacy/testdata/gw-proxy-tracing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-proxy-tracing
  labels:
    app.kubernetes.io/name: gateway-proxy-tracing-service
spec:
  type: LoadBalancer
  ports:
    # This service exposes the Port 18080, used by the Gateway defined in ./gateway.yaml
    - name: gateway-proxy-tracing
      port: 18080
      protocol: TCP
      targetPort: 18080
  # This selector is meant to match the Selector of the deployed gateway-proxy Service
  # We intend to route traffic to the gateway-proxy pod(s) that are deployed at install time
  selector:
    gateway-proxy-id: gateway-proxy
    gateway-proxy: live
---
